--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -284,7 +284,7 @@
                                             <img class="img-circle img-sm img-border" src="{% static "img/profile-photos/1.png" %}" alt="Profile Picture">
                                         </div>
                                         <a href="#profile-nav" class="box-block" data-toggle="collapse" aria-expanded="false">
-                                            <p class="mnp-name">{{request.user}}</p>
+                                            <p class="mnp-name">{{request.user.email}}</p>
                                         </a>
                                     </div>
                                 </div>
