--- a/users/templates/operator.html
+++ b/users/templates/operator.html
@@ -33,7 +33,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Phone number</label>
-                                                    <input type="number" class="form-control" name="phonenumber" placeholder="especially for mobile user"/> 
+                                                    <input type="text" class="form-control" name="phonenumber" placeholder="especially for mobile user"/> 
                                                 </div>
                                             </div>
                                             
