--- a/users/templates/update_customer.html
+++ b/users/templates/update_customer.html
@@ -76,6 +76,18 @@
                                                     </select>                                                
                                             </div>
                                             </div>
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label class="control-label">Meter Number</label>
+                                                    <select class="form-control" name="Meternumber">
+                                                       <option value="">Select meter number</option> 
+                                                    {% for meter in Meter %}
+                                                       <option value="{{meter.id}}">{{meter.Meternumber}}</option> 
+                                                    {% endfor %}
+                                                       
+                                                    </select>  
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="panel-footer text-right">
