--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -19,7 +19,7 @@
                                         <div class="btn-group">
                                             <div class="form-group">
                                         <form class="form-inline my-2 my-lg-0" action="{% url 'Receipts'%}">
-                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Names" class="form-control" autocomplete="off">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by MeterNUmber" class="form-control" autocomplete="off">
                                         <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                                         </form>
                                         </div>
