--- a/users/templates/quotation.html
+++ b/users/templates/quotation.html
@@ -16,17 +16,12 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-
-                                        <div class="btn-group">
-                                            <div class="form-group">
-                                        </div>
-                                   
-                                            
-                                        </div>
+                                        <button value="click" onclick="printDiv()" id="demo-btn-addrow" class="btn btn-mint"><i class="fa fa-print fa-lg"></i>&nbsp; &nbsp;Print</button>
+                                        <a href="{% url 'export_quotation_csv' subscription.id %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="table-responsive">
+                            <div id="onlytable" class="table-responsive">
                                 <table class="table table-striped" style="border: 1px">
                                     <thead>
                                         <tr>
@@ -87,5 +82,17 @@
 					
 					
                 </div>
+                <script>
+                    function printDiv() {
+                        var divContents = document.getElementById("onlytable").innerHTML;
+                        var a = window.open('', '', 'height=800, width=800');
+                        a.document.write('<html>');
+                        a.document.write('<body> <h1>Quotation<br>');
+                        a.document.write(divContents);
+                        a.document.write('</body></html>');
+                        a.document.close();
+                        a.print();
+                    }
+                </script>
 
 {% endblock content%}
