--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -82,7 +82,7 @@
                                 <div class="row">
 					               
 					                <div class="col-md-6">
-					                    <div class="panel panel-info panel-colorful media middle pad-all">
+					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
 					                                <i class="far fa-credit-card icon-3x"></i>
@@ -95,7 +95,7 @@
 					                    </div>
 					                </div>
 					                <div class="col-md-6">
-					                    <div class="panel panel-mint panel-colorful media middle pad-all">
+					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
 					                               <i class="fas fa-coins icon-3x"></i>
@@ -104,6 +104,19 @@
 					                        <div class="media-body">
 					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
+					                        </div>
+					                    </div>
+					                </div>
+									<div class="col-md-12"  >
+					                    <div class="panel panel-purple panel-colorful media middle pad-all">
+					                        <div class="media-left">
+					                            <div class="pad-hor">
+					                                <i class="fas fa-users icon-3x"></i>
+					                            </div>
+					                        </div>
+					                        <div class="media-body">
+										<p class="text-2x mar-no text-semibold">{{allsoldlitre}}</p>
+					                            <p class="mar-no">All Sold litres</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -164,7 +177,7 @@
                                 <div class="row">
 					               
 					                <div class="col-md-6">
-					                    <div class="panel panel-info panel-colorful media middle pad-all">
+					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
 					                                <i class="far fa-credit-card icon-3x"></i>
@@ -186,6 +199,19 @@
 					                        <div class="media-body">
 					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
+					                        </div>
+					                    </div>
+					                </div>
+									<div class="col-md-12"  >
+					                    <div class="panel panel-purple panel-colorful media middle pad-all">
+					                        <div class="media-left">
+					                            <div class="pad-hor">
+					                                <i class="fas fa-users icon-3x"></i>
+					                            </div>
+					                        </div>
+					                        <div class="media-body">
+										<p class="text-2x mar-no text-semibold">{{weeklysoldlitre}}</p>
+					                            <p class="mar-no">Weekly Sold litres</p>
 					                        </div>
 					                    </div>
 					                </div>
@@ -246,7 +272,7 @@
                                 <div class="row">
 					               
 					                <div class="col-md-6">
-					                    <div class="panel panel-info panel-colorful media middle pad-all">
+					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
 					                                <i class="far fa-credit-card icon-3x"></i>
@@ -268,6 +294,20 @@
 					                        <div class="media-body">
 					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
+					                        </div>
+					                    </div>
+					                </div>
+
+									<div class="col-md-12"  >
+					                    <div class="panel panel-purple panel-colorful media middle pad-all">
+					                        <div class="media-left">
+					                            <div class="pad-hor">
+					                                <i class="fas fa-users icon-3x"></i>
+					                            </div>
+					                        </div>
+					                        <div class="media-body">
+										<p class="text-2x mar-no text-semibold">{{dailysoldlitre}}</p>
+					                            <p class="mar-no">Daily Sold litres</p>
 					                        </div>
 					                    </div>
 					                </div>
